improve User.API

--- a/Services/User.API/User.API.csproj
+++ b/Services/User.API/User.API.csproj
@@ -28,8 +28,17 @@
 
   <ItemGroup>
     <None Remove="Entities\" />
+    <None Remove="DTO\" />
+    <None Remove="Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
+    <Folder Include="DTO\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Item\Item.API.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
