--- a/Tests/Item.API.Test/Item.API.Test.csproj
+++ b/Tests/Item.API.Test/Item.API.Test.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="Xunit.DependencyInjection" Version="8.7.2" />
   </ItemGroup>
 
   <ItemGroup>
