--- a/Tests/Item.API.Test/Item.API.Test.csproj
+++ b/Tests/Item.API.Test/Item.API.Test.csproj
@@ -23,6 +23,8 @@
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Xunit.DependencyInjection" Version="8.7.2" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="7.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.9" />
   </ItemGroup>
 
   <ItemGroup>
