Add test priority

--- a/Tests/Item.API.Test/Item.API.Test.csproj
+++ b/Tests/Item.API.Test/Item.API.Test.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Services\Item\Item.API.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="appsettings.json" Condition="'$(ExcludeConfigFilesFromBuildOutput)'!='true'">
