--- a/Services/User.API/User.API.csproj
+++ b/Services/User.API/User.API.csproj
@@ -42,5 +42,8 @@
     <ProjectReference Include="..\Item\Item.API.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\Common\Service.Common.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
