Add email service

--- a/Services/User.API/appsettings.json
+++ b/Services/User.API/appsettings.json
@@ -2,6 +2,12 @@
     "ConnectionStrings": {
         "UserDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=User;Trusted_Connection=True;MultipleActiveResultSets=True"
     },
+    "JwtSettings": {
+        "Issuer": "6-ELEVENAPI",
+        "Audience": "6-ELEVENAPIClient",
+        "DurationInMinutes": 10,
+        "Key": "sixelevenPrivateKey"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
