--- a/Services/Common/Service.Common.csproj
+++ b/Services/Common/Service.Common.csproj
@@ -10,10 +10,12 @@
   <ItemGroup>
     <None Remove="Middleware\" />
     <None Remove="Exceptions\" />
+    <None Remove="Email\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Middleware\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Email\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
